syntax = "proto3";

package user;
option java_multiple_files = true;

message UserRequest {
  string name = 1;
  string email = 2;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message UserId {
  int64 id = 1;
}

message UserList {
  repeated UserResponse users = 1;
}

service UserService {
  rpc CreateUser(UserRequest) returns (UserResponse);
  rpc GetUserById(UserId) returns (UserResponse);
  rpc GetUsers(Empty) returns (UserList);
}

message Empty {}
